--- a/Day 07 23-06-2024/Block vs Inline Homework Recap.html
+++ b/Day 07 23-06-2024/Block vs Inline Homework Recap.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Author: prasanth
-     Second Author: Shreeamsh
+     Second Author: Shreeamsh T
      Version 1.0
      Date: June - 23rd - 2024 -->
 </body>
