--- a/Day 07 23-06-2024/Block vs Inline Homework Recap.html
+++ b/Day 07 23-06-2024/Block vs Inline Homework Recap.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Block Vs Inline Homework Recap</title>
+    <style>
+        span{background-color: rgb(127, 215, 127);}
+    </style>
 </head>
 <body>
-    <!-- Author: prasanth
-     Second Author: Shreeamsh T
-     Version 1.0
-     Date: June - 23rd - 2024 -->
+    <p style="padding: 20px;background-color: lightblue;">This is a block-level element.</p>
+    <p style=""><span>This</span> <span>is</span> <span>an</span> <span>inline</span> <span>styles</span></p>
 </body>
 </html>
