Monday Before Homework

--- a/Day 07 23-06-2024/block vs inline.html
+++ b/Day 07 23-06-2024/block vs inline.html
@@ -8,12 +8,19 @@
         h1{
             border: 2px solid tomato;
             background-color: tomato;
+            text-align: center;
+            display: block;
+        }
+        p{
+            color:green;
+            border: 3px solid turquoise;
         }
         span{
             background-color: blue;
-            border: 2px solid ;
+            border: 3px solid tomato;
             border-radius: 50px;
-            padding: 5px
+            padding: 5px;
+            display:inline;
         }
     </style>
 </head>
