--- a/Day 07 23-06-2024/Block vs Inline Homework Recap.html
+++ b/Day 07 23-06-2024/Block vs Inline Homework Recap.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Block Vs Inline Homework Recap</title>
     <style>
-        span{background-color: rgb(127, 215, 127);}
+        span{background-color: rgb(127, 215, 127);padding: 2px;}
     </style>
 </head>
 <body>
     <p style="padding: 20px;background-color: lightblue;">This is a block-level element.</p>
-    <p style=""><span>This</span> <span>is</span> <span>an</span> <span>inline</span> <span>styles</span></p>
+    <p style=""><span>This</span> <span style="background-color: aquamarine;">is</span> <span style="background-color: hotpink;">an</span> <span style="background-color: cornsilk;">inline</span> <span style="background-color: orchid;">styles</span></p>
 </body>
 </html>
