--- a/Day 07 23-06-2024/Block vs Inline Homework Recap.html
+++ b/Day 07 23-06-2024/Block vs Inline Homework Recap.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <p style="padding: 20px;background-color: lightblue;">This is a block-level element.</p>
-    <p style=""><span>This</span> <span>is</span> <span>an</span> <span>inline</span> <span>styles</span></p>
+    <p><span>This</span> <span>is</span> <span>an</span> <span>inline</span> <span>styles</span></p>
 </body>
 </html>
