--- a/All homeworks/3.html
+++ b/All homeworks/3.html
@@ -20,8 +20,9 @@
         }
 
         .main-container {
-            background-color: rgb(163, 160, 160);
+            /* background-color: rgb(163, 160, 160); */
             margin: 10px;
+            /* padding: 30px; */
         }
 
         .right-section {
@@ -36,6 +37,7 @@
             width: 50%;
             float: left;
             height: 30px;
+            margin-bottom: 10px;
 
         }
 
@@ -44,11 +46,15 @@
             padding: 20px;
             text-align: center;
             clear: both;
+            margin-top: 10px;
         }
 
-        /* .parent-container{
-            
-        } */
+        .parent-container{
+             width: 100%;
+            height: auto;
+            /* overflow: auto; */
+            background-color: lightgrey;
+        }
     </style>
 </head>
 
