--- a/All homeworks/5.html
+++ b/All homeworks/5.html
@@ -38,7 +38,8 @@
         </div>
         <div class="class box2"> <img src="Images/Linkedin.png" alt="" width="150px"><br> <br>This is linked In</div>
         <div class="class box3"><img src="Images/Youtube.png" alt="" width="150px"><br>This is the <br> description more
-            <br>description more <br><br></div>
+            <br>description more <br><br>
+        </div>
         <div class="class box4"><img src="Images/facebook.png" alt="" width="150px"><br>This is the <br> description
         </div>
     </div>
