--- a/Day 17 15-07-2024/Text-Shadow Demo.html
+++ b/Day 17 15-07-2024/Text-Shadow Demo.html
@@ -31,6 +31,7 @@
             font-weight: normal;
             font-size: 32px;
             letter-spacing: 3px;
+            text-shadow: 10px 10px 10px white;
         }
     </style>
 </head>
