--- a/Day 10 01-07-2024/1.html
+++ b/Day 10 01-07-2024/1.html
@@ -12,13 +12,15 @@
             height: 100px;
             float: left;
         }
+
         .right img {
             margin-right: 15px;
             width: 100px;
             height: 100px;
             float: right;
         }
-        h1{
+
+        h1 {
             text-align: center;
         }
     </style>
@@ -26,13 +28,15 @@
 
 <body>
     <h1> One</h1>
-    <p class="left"><img src="google.png" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, aspernatur
+    <p class="left"><img src="homework.png" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis,
+        aspernatur
         voluptatum! Rerum consequatur consequuntur quia modi maxime iste? Cum dolor asperiores illum nulla eligendi,
     </p>
     <h1> Two</h1>
-    <p class="right"><img src="google.png" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, aspernatur
+    <p class="right"><img src="google.png" alt="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis,
+        aspernatur
         voluptatum! Rerum consequatur consequuntur quia modi maxime iste? Cum dolor asperiores illum nulla eligendi,
-        </p>
+    </p>
 </body>
 
 </html>
