--- a/Day 10 7-02-2024/2.html
+++ b/Day 10 7-02-2024/2.html
@@ -18,12 +18,12 @@
         .two {
             float: right;
             background-color: yellow;
-            text
+            
         }
 
         .one {
             background-color: red;
-            float: left
+            float: left;
         }
 
         .text {
