Commiting so I could Pull

--- a/All homeworks/6.html
+++ b/All homeworks/6.html
@@ -32,8 +32,8 @@
         }
 
         .circle:first-child:hover+.circle:last-child {
-            box-shadow: inset 0px 0px 100px black;
-            transition: box-shadow ease 1s;
+            box-shadow: inset 0px 0px 1000px black;
+            transition: 1s;
         }
 
         .circle:nth-child(2) {
