--- a/All homeworks/8.html
+++ b/All homeworks/8.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .FixedSidebar {
+            background: gray;
+            border: 2px solid black;
+
+        }
+    </style>
 </head>
 
 <body>
     <div>
-        <div></div>
+        <div class="FixedSidebar">Fixed Sidebar</div>
     </div>
 </body>
 
