Cards-Homework : Done

--- a/All homeworks/8.html
+++ b/All homeworks/8.html
@@ -7,9 +7,16 @@
     <title>Document</title>
     <style>
         .FixedSidebar {
-            background: gray;
-            border: 2px solid black;
+            background-color: rgb(72, 71, 71);
+            box-sizing: content-box;
+            padding: 40px;
+            margin: -20px;
+            color: white;
 
+        }
+
+        .INFORMATIONABOUTFIXEDSIDEBAR {
+            display:
         }
     </style>
 </head>
@@ -18,6 +25,7 @@
     <div>
         <div class="FixedSidebar">Fixed Sidebar</div>
     </div>
+    <div class="INFORMATIONABOUTFIXEDSIDEBAR">Scroll down to see thefixe</div>
 </body>
 
 </html>
