--- a/Demo.html/demo2.html
+++ b/Demo.html/demo2.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Demo2</title>
     <Style>
-        .box{
+        .box {
             width: 33%;
         }
     </Style>
 </head>
-<body>
-    <div class="box">1</div> 
-    <div class="box">2</div> 
-    <div class="box">3</div> 
+
+<body style="background-color: ;">
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
 </body>
+
 </html>
